[package]
name = "hyper-async-demo"
version = "0.1.0"
authors = ["Justin Geibel <jtgeibel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper" }
tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["rt-full"] }
futures-preview = { version = "0.3.0-alpha.17", features = ["async-await", "nightly"] }

ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.6"
log = "0.4"
